@@ -1,3 +1,8 @@
+2018-05-25  François Dumont  <fdumont@gcc.gnu.org>
+
+	PR libstdc++/85768
+	* src/c++11/debug.cc: Remove backtrace usage.
+
 2018-05-24  Maya Rashish  <coypu@sdf.org>
 
 	PR target/85904
